<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.auth.login.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llcHeaderContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/default_padding"
        android:paddingTop="@dimen/default_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvHeaderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eco_tourism"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/xl_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvHeaderSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_header"
            android:textColor="@color/colorWhite" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBodyContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/big_padding"
        android:background="@drawable/bg_white_top_xl_rounded"
        android:paddingHorizontal="@dimen/small_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llcHeaderContainer">

        <ScrollView
            android:id="@+id/svBodyContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clInnerBodyContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/big_padding">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llcUsernameFormContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/small_margin"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tvUsernameLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_username" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tiUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        app:boxBackgroundMode="none"
                        app:hintAnimationEnabled="false"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etUsername"
                            android:paddingHorizontal="@dimen/default_padding"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/default_height"
                            android:background="@drawable/bg_white_xl_border_divider_rounded"
                            android:hint="@string/login_username"
                            android:imeActionLabel="@string/login_username"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:paddingVertical="@dimen/small_padding"
                            android:paddingTop="0dp"
                            android:singleLine="true"
                            android:textSize="@dimen/default_text"
                            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llcPasswordFormContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/small_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/llcUsernameFormContainer">

                    <TextView
                        android:id="@+id/tvPasswordLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_password" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tiPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        app:boxBackgroundMode="none"
                        app:hintAnimationEnabled="false"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:paddingHorizontal="@dimen/default_padding"
                            android:layout_height="@dimen/default_height"
                            android:background="@drawable/bg_white_xl_border_divider_rounded"
                            android:hint="@string/login_password"
                            android:imeActionLabel="@string/login_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingVertical="@dimen/small_padding"
                            android:paddingTop="0dp"
                            android:singleLine="true"
                            android:textSize="@dimen/default_text"
                            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/small_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:text="@string/not_have_account"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorBlue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/llcPasswordFormContainer" />


                <com.apachat.loadingbutton.core.customViews.CircularProgressButton
                    android:id="@+id/btnMasuk"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/default_height"
                    android:layout_marginHorizontal="@dimen/small_margin"
                    android:layout_marginTop="@dimen/xxl_margin"
                    android:layout_marginBottom="@dimen/default_padding"
                    android:background="@drawable/bg_btn_accent_rounded"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvRegister"
                    app:spinning_bar_color="@color/colorWhite"
                    app:spinning_bar_padding="6dp"
                    app:spinning_bar_width="4dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>